<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ActivitiesClasses.Walkthrough">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.viewpager.widget.ViewPager
        android:layout_marginTop="80dp"
        android:layout_width="300dp"
        android:layout_height="480dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/vp"/>

    <RelativeLayout
        android:id="@+id/buttonskip"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/vp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnnext"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:background="@drawable/skipbg"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/btndone"
            android:visibility="gone"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/done"
            android:textColor="@color/colorWhite"
            android:background="@drawable/skipbg"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/dotline"
        android:layout_margin="5dp"
        android:layout_below="@id/buttonskip"
        android:layout_width="match_parent"
        android:layout_height="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/dot1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/dotseen"
                android:layout_centerInParent="true"/>

            <ImageView
                android:id="@+id/dot2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/dotseen"
                android:layout_centerInParent="true"/>

            <ImageView
                android:id="@+id/dot3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/dotseen"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/dot4"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/dotseen"
                android:layout_centerInParent="true"/>

        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/textskip"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/dotline"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/dotslayout"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"/>
        <TextView
            android:id="@+id/skiptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skipbtn"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>